--- a/Events/events.html
+++ b/Events/events.html
@@ -21,9 +21,15 @@
     <p id="click">Click On Me</p>
     <p id="dblclick">Double Click On Me</p>
     <p id="mouse">Hover On Me</p>
-
     <p id="touch"></p>
     <h1 id="touchpressure"></h1>
+    <p id="once">A One Time Thing...</p>
+    <p><a href="https://sitepoint.com" id="broken">Broken Link</a></p>
+    <ul id="list">
+      <li>one</li>
+      <li>two</li>
+      <li>three</li>
+    </ul>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
