--- a/quiz/index.html
+++ b/quiz/index.html
@@ -17,10 +17,9 @@
         <div id="question"></div>
         <div id="result"></div>
         <div id="info"></div>
+        <button id="start">Click to Start</button>
       </div>
     </section>
-    <script type="text/javascript" src="main.js">
-
-    </script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
