--- a/quiz/index.html
+++ b/quiz/index.html
@@ -15,6 +15,10 @@
           <h1>Quiz Ninja!</h1>
         </header>
         <div id="question"></div>
+        <form action="" id="response">
+          <input type="text" name="answer">
+          <button type="submit">Submit Answer</button>
+        </form>
         <div id="result"></div>
         <div id="info"></div>
         <button id="start">Click to Start</button>
